fix other issues with land z-index

--- a/application/stylus/organisms/land.styl
+++ b/application/stylus/organisms/land.styl
@@ -9,9 +9,8 @@ popsSize= 420px
   a
     hasOutline: white
 @media (max-width: delta - 1)
-  .wrapper:not(.loading) #land
-    z-index: 0
   .app #land
+    z-index: 0
     visibility: hidden
 
 //  BACKGROUND
@@ -28,12 +27,12 @@ popsSize= 420px
 //  Z-INDEX
 #pops,
 #clerkFlat,
-#land .navigation,
+#land .links,
 #land .headlines
   z-index: -1
 .app #pops,
 .app #clerkFlat,
-.app #land .navigation,
+.app #land .links,
 .app #land .headlines
   z-index: 2
 
